# out-dns

./: LICENCE  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: 2  Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/database/: config_repository.rs  db.rs  dns_repository.rs  mod.rs
src-tauri/src/handlers/: config.rs  database.rs  dns.rs  interface.rs  mod.rs  network_interfaces.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/services/: config_service.rs  dns_service.rs  interface_service.rs  mod.rs
src/components/buttons/: ClearCacheButton.tsx  HMenu.tsx  SetDNSButton.tsx
src/components/comboBox/: dns-servers.tsx  network-interfaces.tsx
src/components/dns/: dns-servers.tsx
src/components/input/: dns-servers-inp.tsx
src/components/menu/: Layout.tsx
src/components/menu/dns/: Page.tsx
src/components/menu/general/: Page.tsx
src/components/menu/support/: Page.tsx
src/components/menu/update/: page.tsx
src/components/titlebar/: titlebar.tsx
src/contexts/: configsContext.tsx  logContext.tsx  popupContext.tsx
src/lib/: tray.ts
