[package]
name = "out-dns"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "out_dns_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = {version= "0.31", features= ["bundled"] }
tauri = { version = "2", features = [
    "tray-icon"
] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
network-interface = "2"
is_elevated = "0.1.2"
hickory-resolver = "0.24"
tokio = "1.52.3"
tauri-plugin-log = "2"
windows = { version = "0.62", features = [
    "Win32_NetworkManagement_IpHelper",
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_Ndis",
    "Win32_System_Com",
] }
